# slot-machine

./: .gitignore  Cargo.toml  README.md  aliases.csv  build.sh  catalog_premine_testnet11.csv  catalog_price_schedule_testnet11.csv  test_price_schedule.csv  xchandles_premine_testnet11.csv  xchandles_price_schedule_testnet11.csv
.github/workflows/: rust.yml
include/: cns_price.clib  condition_codes.clib  merkle_utils.clib  secure_nft.clib  slots.clib  xchandles.clib
puzzles/: slot.clsp  slot.clsp.hex
puzzles/actions/auctions/: bid.clsp  bid.clsp.hex  end.clsp  end.clsp.hex  finalizer_reserve.clsp  finalizer_reserve.clsp.hex
puzzles/actions/catalog/: refund.clsp  refund.clsp.hex  register.clsp  register.clsp.hex  state_from_singleton.clsp  state_from_singleton.clsp.hex
puzzles/actions/cns/: expire.clsp  expire.clsp.hex  extend.clsp  extend.clsp.hex  oracle.clsp  oracle.clsp.hex  register.clsp  register.clsp.hex  update.clsp  update.clsp.hex
puzzles/actions/dig/: add_incentives.clsp  add_incentives.clsp.hex  add_mirror.clsp  add_mirror.clsp.hex  commit_incentives.clsp  commit_incentives.clsp.hex  initiate_payout.clsp  initiate_payout.clsp.hex  new_epoch.clsp  new_epoch.clsp.hex  remove_mirror.clsp  remove_mirror.clsp.hex  remove_mirrror.clsp  sync.clsp  sync.clsp.hex  withdraw_incentives.clsp  withdraw_incentives.clsp.hex
puzzles/actions/dig_reward_distributor/: new_epoch.clsp
puzzles/actions/reward_distributor/: add_incentives.clsp  add_incentives.clsp.hex  commit_incentives.clsp  commit_incentives.clsp.hex  initiate_payout.clsp  initiate_payout.clsp.hex  new_epoch.clsp  new_epoch.clsp.hex  sync.clsp  sync.clsp.hex  withdraw_incentives.clsp  withdraw_incentives.clsp.hex
puzzles/actions/shared/: delegated_state.clsp  delegated_state.clsp.hex  state_from_singleton.clsp  state_from_singleton.clsp.hex
puzzles/actions/xchandles/: expire.clsp  expire.clsp.hex  extend.clsp  extend.clsp.hex  oracle.clsp  oracle.clsp.hex  refund.clsp  refund.clsp.hex  register.clsp  register.clsp.hex  update.clsp  update.clsp.hex
puzzles/default_puzzles/: default_cat_maker.clsp  default_cat_maker.clsp.hex  exponential_premium.clsp  exponential_premium.clsp.hex  factor_pricing.clsp  factor_pricing.clsp.hex  revocable_cat_maker.clsp  revocable_cat_maker.clsp.hex
puzzles/nft/: any_metadata.clsp  any_metadata.clsp.hex  precommit.clsp  uniqueness_prelauncher.clsp  uniqueness_prelauncher.clsp.hex
puzzles/pricing/: exponential_premium.clsp  factor_pricing.clsp  factor_pricing.clsp.hex
puzzles/reward_distributor/: reserve_finalizer.clsp
puzzles/reward_distributor/actions/: add_current_epoch_incentives.clsp  sync.clsp
puzzles/singleton/: action.clsp  action.clsp.hex  catalog_preroller.clsp  catalog_preroller.clsp.hex  finalizer.clsp  finalizer.clsp.hex  p2_delegated_by_singleton.clsp  precommit.clsp  precommit.clsp.hex  reserve.clsp  reserve.clsp.hex  reserve_finalizer.clsp  reserve_finalizer.clsp.hex  slot.clsp  slot.clsp.hex  state.clsp  state.clsp.hex  state_scheduler.clsp  state_scheduler.clsp.hex  uniqueness_prelauncher.clsp  uniqueness_prelauncher.clsp.hex  use_singleton_full_puzzle_hash.clsp
puzzles/verification/: catalog_verification_maker.clsp  catalog_verification_maker.clsp.hex  verification.clsp  verification.clsp.hex  verification_asserter.clsp  verification_asserter.clsp.hex  verification_offer.clsp  verification_offer.clsp.hex  verification_payments.clsp  verification_payments.clsp.hex
src/: benchmarker.rs  cat_nft_metadata.rs  cli.rs  debug.rs  drivers.rs  launcher_ext.rs  layers.rs  lib.rs  main.rs  name_nft_metadata.rs  primitives.rs
src/cli/: catalog.rs  chia_client.rs  commands.rs  csv.rs  database.rs  dig.rs  multisig.rs  reward_distributor.rs  sage_client.rs  utils.rs  verifications.rs  xchandles.rs
src/cli/catalog/: api_client.rs  broadcast_catalog_state_update.rs  catalog_api_client.rs  continue_launch.rs  initiate_launch.rs  listen.rs  quick_sync.rs  register.rs  sign_catalog_state_update.rs  sync.rs  unroll_state_scheduler.rs  verify_deployment.rs
src/cli/chia_client/: client.rs  de.rs  models.rs  utils.rs
src/cli/dig/: add_rewards.rs  broadcast_mirror_update.rs  clawback_rewards.rs  commit_rewards.rs  find_slot.rs  initiate_payout.rs  launch.rs  new_epoch.rs  sign_mirror_update.rs  sync.rs  sync_distributor.rs
src/cli/multisig/: broadcast_catalog_state_update.rs  broadcast_rekey.rs  broadcast_thing.rs  launch.rs  sign_catalog_state_update.rs  sign_rekey.rs  sign_thing.rs  sync.rs  verify_signature.rs  view.rs
src/cli/reward_distributor/: add_rewards.rs  broadcast_entry_update.rs  clawback_rewards.rs  commit_rewards.rs  find_slot.rs  initiate_payout.rs  launch.rs  new_epoch.rs  sign_entry_update.rs  stake.rs  sync.rs  sync_distributor.rs  unstake.rs  (+1 more)
src/layers/: action.rs  action_layer.rs  actions.rs  catalog_preroller.rs  conditions_layer.rs  m_of_n_layer.rs  p2_delegated_by_singleton_layer.rs  precommit_layer.rs  price_layer.rs  slot_launcher.rs  state_layer.rs  state_scheduler_layer.rs  verification_layer.rs
src/primitives/: catalog.rs  catalog_info.rs  catalog_preroll_info.rs  catalog_preroller.rs  catalog_preroller_info.rs  catalog_registry.rs  catalog_registry_info.rs  cns.rs  cns_info.rs  cns_preroller.rs  cns_preroller_info.rs  default_cat_maker.rs  dig_reward_distributor.rs  dig_reward_distributor_info.rs  medieval_vault.rs  medieval_vault_info.rs  precommit_coin.rs  price_oracle.rs  price_scheduler.rs  price_scheduler_info.rs  reserve.rs  reward_distributor.rs  reward_distributor_info.rs  slot.rs  slot_info.rs  slot_launcher.rs  slot_launcher_info.rs  state_scheduler.rs  state_scheduler_info.rs  uniqueness_prelauncher.rs  verification.rs  verification_asserter.rs  verification_payments.rs  xchandles_registry.rs  xchandles_registry_info.rs
(+87 files in other folders)
