[package]
name = "slot-machine"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["yakuhito <y@kuhi.to>"]
homepage = "https://github.com/Yakuhito/slot-machine"
repository = "https://github.com/Yakuhito/slot-machine"

[dependencies]
clvmr = "0.14.0"
chia = "0.26.0"
clvm-traits = "0.26.0"
chia-puzzle-types = "0.26.0"
getrandom = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hex = "0.4.3"
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-async-std-native-tls"] }
bech32 = "0.9.1"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
dirs = "6.0.0"
rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
tokio-tungstenite ={ version = "0.26.2", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
axum = { version = "0.8.3", features = ["macros"]}
tower-http = { version = "0.6.2", features = ["cors"] }
futures = "0.3.31"
chia-wallet-sdk = { git = "https://github.com/xch-dev/chia-wallet-sdk.git", rev="1199e568df1d8a77a824e166d674a1e913bef211", features=["offer-compression", "action-layer"] }
sage-api = { version = "0.12.3", git = "https://github.com/xch-dev/sage.git" }
chia-puzzles = "0.20.1"

[dev-dependencies]
anyhow = "1.0.98"
rstest = "0.22.0"
prettytable-rs = "0.10.0"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }
